- Implementing response dispatcher. - Fixing package entry point. -Little fix to environment in errorHandler. - Implementing middleware core. - Implementing example of morpheus usage.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-tongue",
   "version": "1.0.0",
   "description": "Localization library for Express. It works with every template engine and exposes a json endpoint to consume on client side.",
-  "main": "src/middleware.js",
+  "main": "index.js",
   "scripts": {
     "test": "mocka tests/suite",
     "start": "node tests/server.js"
