--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "dependencies": {
     "lodash": "^2.4.1",
-    "express": "^4.9.3"
+    "express": "^4.9.3",
+    "compression": "^1.6.0",
+    "body-parser": "^1.8.2",
+    "helmet": "^0.15.0",
+    "cors": "^2.4.1"
   },
   "devDependencies": {
     "debug": "^2.0.0",
