--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "compression": "^1.6.0",
     "body-parser": "^1.8.2",
     "helmet": "^0.15.0",
-    "cors": "^2.4.1"
+    "cors": "^2.4.1",
+    "method-override": "^1.0.2"
   },
   "devDependencies": {
     "debug": "^2.0.0",
