--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "body-parser": "^1.8.2",
     "helmet": "^0.15.0",
     "cors": "^2.4.1",
-    "method-override": "^1.0.2"
+    "method-override": "^1.0.2",
+    "express-cache-ctrl": "^1.0.1"
   },
   "devDependencies": {
     "debug": "^2.0.0",
