--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "gulp-util": "^3.0.1",
     "jshint-stylish": "^1.0.0",
     "mocha": "^1.21.5",
+    "mock-req": "^0.1.0",
+    "mock-res": "^0.5.0",
     "supertest": "^1.1.0",
     "chai": "^1.10.0"
   }
